[package]
name = "esp32_st7735"
version = "0.1.0"
authors = ["uh-kay <konstantius.kevin@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32_st7735"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.44.1"
embedded-graphics = "0.8.1"
st7735-lcd = "0.10.0"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
